--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 							     <div class="fh5co-post to-animate">
 								<h3><i class="section-heading text-center">ADAPT</i></h3>
-								<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
+								<h4 class="to-animate">Upload your TWO OR THREE dataset directly on Rstudio to compare and suit models on your own regression task</h4>
 							      </div>
 						</div>
 						</div>
